Remove java 17 functions (can't run aws build with java 17)